Till T3 before India

--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -13,11 +13,50 @@
 
 The Pierre Auger Observatory~\cite{} is the largest cosmic ray observatory in the world. Located outside Malargue in the Argentinian \textit{pampas} the observatory spans across an area of 3000k$m^2$. Originally conceptualized in the 1990s the Observatory was built in the early 2000s and fully completed in 2008. Geographically the site is located near the base of the Andes at an altitude of 1400m above sea level and across its whole span is relatively flat. The Observatory was designed to detect cosmic ray induced air showers having a primary energy from $10^{17}$eV to $10^{20}eV$ and beyond. It does so by identifying the EAS via two different complementary detecting components: \textit{Surface Detector} array (SD) and the \textit{Fluorescence Detector}(FD). A schematic o the observatory is shown in fig.~\ref{}. The SD consists of 1660 water Cherenkov tanks spread in a triangular grid with 1.5km spacing. The FD consists of four sites with 27 telescopes located at the edges of the ground array and overlooking the sky above. The Observatory also consists of various atmospheric monitoring devices such as LIDARs~\cite{}, laser facilities CLF and XLF~\cite{} and other weather sensors to constantly monitor the atmosphere which is important for FD operation. With the AugerPrime upgrade of the Observatory which is scheduled to be finished in 2024 two new detecting components are being added: The \textit{Radio Detector}(RD)~\cite{} and the \textit{Underground Muon Detector}(UMD)~\cite{}. The SD is also being upgraded with the addition of a scintillator on top of the tanks~\cite{}. Each individual component of the new upgrade is not discussed in detail since they are not used in the context of this thesis but only AugerPrime as a whole and its potential for detecting neutrinos at the Pierre Auger Observatory is discussed.
 
-Eventhough, the primary objective of the Pierre Auger Observatory is UHECR physics it can also detect the neutrino induced EAS signature via both the SD and FD. The low neutrino interaction probability requires a detector which is always active. The high duty cycle of the SD $\approx 100$\% compared to a limited duty cycle of the FD $\approx 10-13$\% makes SD the more probable of the detector to detect neutrinos. This has already been shown in previous neutrino searches at Auger~\cite{} where the search with the SD provides the stringiest limits for neutrino searches at the Observatory~\cite{}. This chapter aims to provide a short review of the different components of the Observatory with a focus on the SD and its trigger system since it is the primary detector used for the analysis presented in this thesis. 
+Eventhough, the primary objective of the Pierre Auger Observatory is UHECR physics it can also detect the neutrino induced EAS signature via both the SD and FD. The low neutrino interaction probability requires a detector which is always active. The high duty cycle of the SD $\approx 100$\% compared to a limited duty cycle of the FD $\approx 10-15$\% makes SD the more probable of the detector to detect neutrinos. This has already been shown in previous neutrino searches at Auger~\cite{} where the search with the SD provides the stringiest limits for neutrino searches at the Observatory~\cite{}. This chapter aims to provide a short review of the different components of the Observatory with a focus on the SD and its trigger system since it is the primary detector used for the analysis presented in this thesis. 
 
 \section*{Fluorescence Detector}
 \label{sec:Fl_det}
-The Fluorescence Detector system at the Pierre Auger Observatory consists of an array of Fluorescence telescopes that are constantly looking inwards over the surface detector array trying to measure the nitrogen fluorescence induced by the EAS. The FD consists of 24 telescopes located at four different small hills( Coihueco, Los Morados, Loma Amarilla and Los Leones). The Coihueco site also consists of High Elevation Auger Telescopes (HEAT) which can be tilted upwards to extend the field of view at the Coiheuco site. Each of the 24 telescopes have a field of view of $30^{\circ} \times 30^{\circ}$ in azimuth and elevation. The combination of the telescopes gives a azimuth coverage of $180^{\circ}$. The HEAT telescopes can extend the field of view by a further $30^{\circ}$ in elevation. This gives a 100\% triggering efficiency for EAS above $10^{19}$eV for FD and above $10^{17}$eV with the inclusion of HEAT. Currently, the FD is always operated in combination with SD. The expected fluorescence yield   
+The Fluorescence Detector system at the Pierre Auger Observatory consists of an array of Fluorescence telescopes that are constantly looking inwards over the surface detector array trying to measure the nitrogen fluorescence induced by the EAS. The FD consists of 24 telescopes located at four different small hills( Coihueco, Los Morados, Loma Amarilla and Los Leones). The Coihueco site also consists of High Elevation Auger Telescopes (HEAT) which can be tilted upwards to extend the field of view at the Coiheuco site. Each of the 24 telescopes have a field of view of $30^{\circ} \times 30^{\circ}$ in azimuth and elevation. The combination of the telescopes gives an azimuth coverage of $180^{\circ}$. The HEAT telescopes can extend the field of view by a further $30^{\circ}$ in elevation. This gives a 100\% triggering efficiency for EAS above $10^{19}$eV for FD and above $10^{17}$eV with the inclusion of HEAT. Currently, the FD is always operated in combination with SD. As mentioned before the measured fluorescence light gives the deposited shower energy which is about 90\% of the total. The rest 10\% which is carried by non florescence producing particles such as neutrinos and muons is corrected with simulations~\cite{}. The expected fluorescence yield(combined for all wavelengths) is affected by the temperature, pressure and humidity of air~\cite{}. This is constantly monitored at the Observatory via several monitoring instruments. Each FD site is equipped with a LIDAR station~\cite{} which continuously monitors the aerosol profile, cloud and sky cameras which photograph the sky to estimate the cloud coverage and wind and rain sensors for safe functioning of the FD telescopes. Two laser facilities Central Laser Facility (CLF)~\cite{} and eXtreme Laser Facility (XLF)~\cite{} have also been functional since 2003 and 2008 respectively. These help provide hourly measurements of the atmospheric aerosol content and can also be used to measure FD performance~\cite{}. 
+
+Fig~\ref{} shows an FD site along with the schematic of an FD telescope. The fluorescence light enters through the UV filtered window 
+which is surrounded by a corrector ring. A spherical segmented mirror is used to gather the incoming light and focus it onto a 440 pixeled PMT camera. The camera records the light pulses every 100ns and based on a hierarchical trigger~\cite{} saves the event. For reconstructing the energy and the geometry of the shower the recorded information is combined with the information detected by the SD(hybrid) or other FD telescopes(stereo)~\cite{}. A relative calibration of the PMTs in performed for each camera before and after each night of data taking~\cite{}. A regular absolute calibration procedure called the X-Y scanner has also been developed and is currently being deployed at each FD telescope. 
+
+The FD acts as an important calibration tool for the SD especially for the energy estimation where the hybrid detection of EAS is used to provide a simulation free primary energy estimate for the SD. It can also be useful for looking into high energy atmospheric phenomenon such as ELVES ~\cite{}. The low duty cylce of the FD ~15\% which is due to the operation being limited to clear moonless nights which limits its overall capabilities especially for a neutrino analysis. However, the FD has been used for up-going neutrino searches ~\cite{} and also has a potential use to look for atmosphere skimming CRs or neutrinos.  
+
+\section*{Surface Detector}
+\label{sec:Sur_det}
+The Surface Detector is a Water Cherenkov Detector(WCD) array which is used to detect the EAS on ground particularyly the footprint via detecting the shower particles that reach the ground. Each WCD~\cite{} comprises of a tank with 3.6m diameter and 1.2m height. It also consists of a reflective inner liner containing 12,000 liters of ultra-pure water. Three 9-in PMTs look into the water and detect the Cherenkov light produced by the charged shower particles as they traverse through water. With the AugerPrime upgrade the WCDs have also been equipped with a scintillator, additional PMT and a radio detector on top. These are described later in section~\ref{}. Each WCD tank also has its own electronics and communication system. All of the components are powered using a solar panel. An artistic representation along with all the components is shown in fig.~\ref{}. 
+
+The 1.5km grid spacing is commonly referred to as SD-1500. There are further sub arrays within the SD SD-750 also called the infill and SD-433 with the numbers representing the distance between the tanks in the sub-arrays. Each WCD can be operated on its own with each PMT signal first recorded at the station and then combined using a Central Data Acquisition System(CDAS)~\cite{} which uses a ranked system of triggers to decides if the combination of all WCDs is a candidate for an EAS event. The data taking process of the SD is described in more details in the following sections. Due to its autonomous nature the SD array is easy to maintain and has a duty cycle ~100\%. The array is only affected if there is a communication outage or if the solar panel cannot generate power for an extended time period both of which are rare at the site of the Pierre Auger Observatory.     
+
+\subsection*{Calibration of SD}
+\label{sec:Sur_det_calib}
+
+The PMT signals in the SD are digitised by a 40MHz 10 bit \textit{flash analog-to-digital converters}(FADCs)~\cite{}. One of the signals is taken from the anode of the PMT and is called the \textit{low gain}(LG) channel and the other is taken by the last dynode and is amplified by a factor of 32 and is called the \textit{high gain}(HG) channel~\cite{}. The two signals provide sufficient precision and range to record both the signals produced near the shower core( ~1000 particles/$\mu$s) and those produced far from the core( ~1 particles/$\mu$s). The signal trace is recorded at a sampling rate of 40MHz with a total of 768 bins leading to each bin width corresponding to 25ns. Due to varying electronics across the WCDs a robust procedure is needed to calibrate each station to a universl unit of measurement for the SD. Also, due to the remoteness of the WCDs such a procedure needs to be performed locally for each station to allow for its functioning even in the case of individual broken PMTs. The unit of measurement used to calibrate the SD stations is called \textit{vertical equivalent muon}(VEM). This is the charge deposited by a vertically central through-going(VCT) muon in the WCD station. The SD by itself cannot select these particular muons but the normal SD measurement of all atmospheric muons has been studied in comparison with a muon telescope that only triggers on these VCTs for a reference tank~\cite{}. This measurement is used to calibrate the SD.
+
+To perform the calibration charge distribution $Q_{VEM}^{peak}$ and the pulse height $I_{VEM}^{peak}$ both for the individual PMTs and their sums are compared to the measurements done with a muon telescope as shown in fig.~\ref{}. The first peak in the figure for the PMT measurement is caused due to low energy particles while the second peak is produced by the atmospheric muons. This peak corresponds to $Q_{VEM}^{peak}$~ 1.03 VEM for the sum and ~1.09 VEM for each PMT. The shift in comparison to the muon telescope measurement is caused by the convolution of photo-electron statistics on an asymmetric peak in the track length distribution and local light
+collection effects. This peak is used to obtain a conversion for the integrated signal of the PMT to VEM units. In addition to this since the subsequent trigger for the SD also requires a measure of the current $I_{VEM}$, this value also needs to be converted and calibrated to VEM units~\cite{}. The same technique as the charge calibration is employed since the VCTs also produce a peak in the pulse height histograms. The calibration is performed every 60s and sent to CDAS thus for an incoming event, calibration data is available for the preceding minute ensuring high calibration accuracy. 
+
+\subsection*{SD Trigger system}
+\label{sec:Sur_det_trig}
+There are three types of different types of station level triggers scalar, calibration and shower trigger. The scalar trigger records signals for very low thresholds and is useful for supplementary physics such as space weather~\cite{}. Calibration trigger as explained in the previous section helps store and calculate the calibration parameters. The main shower trigger, used to record the EAS events is a hierarchical system consisting of two local triggers(T1 and T2) implemented at the station level, a third level trigger(T3) implemented by a CDAS and further event selection triggers(T4 and T5) stored by the SD but only used depending on the analysis and the quality of data required by the analysis. The hierarchical nature arises from the limits on the wireless communication network required for a vast autonomous array. The trigger aims to reduce the rate especially for the expected muonic background and at the same time maximising the EAS candidate detection. A schematic the logic of the trigger system is shown in fig~\ref{}. 
+
+The T1 trigger consists of two parts/modes both of which need to be satisfied for an event to be checked for the possibility of higher level triggers. One of them is a basic threshold trigger(TH) that requires the signal for each of the three PMTs to be above 1.75$I_{VEM}^{peak}$. If there are only one or two PMTs active then the requirement changes to >2.8$I_{VEM}^{peak}$ or >2$I_{VEM}^{peak}$ respectively. The TH mode is used to select large signals which are expected for very inclined CR induced showers($\theta >60^{\circ}$) which are dominantly muons. It reduces the rate for the atmospheric muons from 3KHz to a 100Hz. The second mode for the T1 trigger is called time-over-threshold(ToT). ToT requires 13 or more of the 25ns time bins within a 3$\mu$s window to be above a threshold of 0.2$I_{VEM}^{peak}$ for at least two PMTs. Since, this mode is filtering for signals spread in time it is sensitive to low energy vertical showers nearer to the core and also high energy inclined showers far from the shower core. It is also very effective in filtering random muonic background which typically has a spread of 150ns compared to the 325ns spread for ToT fulfillment. The rate for ToT at each detector is ~1.2KHz with the main contribution being two consecutive muons arriving within the time window. 
+
+
+In June 2013, two additional T1 trigger modes were implemented in the Pierre Auger Observatory to reduce the influence of muons and reduce the energy threshold of the array. The two modes both of which build upon the ToT condition are time-over-threshold-deconvolved(ToTd) and multiplicity-of-positive-steps (MoPS).
+
+The ToTd trigger was first proposed internally in ~\cite{}. The trigger aims to deconvolve the FADC trace, suppressing the exponential tail of the diffusely reflected Cherenkov emission before applying the ToT condition. This helps in compressing the signal from a muon which typically has a fast rise time in one or two time bins before the application of the ToT condition. The trigger has an expected rate of 0.2-3Hz. ToTd also requires the integratd signal to be above 0.5VEM. An example of the functioning of the trigger is shown in fig.~\ref{}. 
+
+The MoPs trigger~\cite{} was implemented to achieve a similar goal as ToT and ToTd i.e a better separation between the air shower signal from the mostly muonic background. It is designed to do so by counting the number of positive steps(cumullation of successive increases) in the FADC trace within a 3$\mu$s sliding window. These steps are expected to be above a certain threshold (5xRMS noise) and below a maximum value(~0.5 VEM). The MoPs trigger is satisfied if more than 4 positive steps are counted during the sliding window in atleast 2 PMTs. The expected rates both from simulations and data taking are found to be <2Hz. MoPs is even better at recovering lower signals compared to ToT and ToTd thus improving the overall trigger efficiency. Both ToTd and MoPs are implemented as an or logic with the ToT condition. 
+
+These triggers particularly improve the trigger efficiency and sensitivity for photon and neutrino induced EAS. The trigger efficiencies for the different T1s implemented at the Pierre Auger Observatory is shown in fig~\ref{}. By rejecting the signals caused by muons or other low energetic particles the triggers are expected to increase the low energy threshold for the detection of these particles. They also help in recording more low electromagetic like signal which is the expected signature for photons and neutrinos. 
+
+T2 level triggers aim to apply higher constraints to T1 triggers. A T1-ToT trigger is automatically updated to a T2-ToT trigger while a T1-TH trigger for upgradation to T2-TH requires the signal to pass a higher threshold condition of >3.2$I_{VEM}^{peak}$ if there are three coincident PMTs. For two(one) working PMTs the threshold is stricter at >3.8(4.5)$I_{VEM}^{peak}$. After the T2 the expected station rate of events drops to ~23Hz. The T2 level triggers from all stations are sent to the CDAS to form a global trigger.
+
+The T3 level aims to build a condition based on both spatial and temporal combinations of stations that have passed the T2 condition. It again has two modes but only ne of these needs to be satisfied to form a successful T3. Both of these conditions use a unit of detector called the crown, $C_n$. The crown as shown in fig~\ref{} is a set of concentric hexagons centered around each station with $n$ giving the order of the surrounding hexagons with 1 being the nearest. The first mode $ToT2C_1\&3C_2$(~\ref{}) requires three SD stations which have passed T2-ToT criteria. It further requires at least one station to be located in the first crown denoted by $2C_1$ and the last to be located in the second crown ($3C_2$). The trigger is efficient in selecting compact vertical showers ($\theta < 60^{\circ}$) and selects about 90\% of the physical events at the array. The second mode $2C_1\&3C_2\&4C_4$(~\ref{}) is less restrictive and aims to select showers with moderate compactness. It requires a 4-fold coincidence of stations having any type of T2s (T2-ToT or T2-TH). The first two neighboring stations must be again located in the first and second crown, but the last station can be as far as the fourth crown. This mode is more efficient in selecting inclined showers which typically being rich in muons have a sparse detector triggering pattern. Along with the spatial requirements both of the modes also require each of the T2 triggers in the stations to be within (6+5$C_n$)$\mu$s of the first one. Once either of the modes is satisfied all the FADC signals from the detectors passing T2 as well as signals from the detectors only passing T1 which are within 30$\mu$s of the T3 are stored by CDAS as a part of the event. This process is described more in detail in ~\cite{}. With the present trigger setup the Observatory records about 3million SD events per year~\cite{}. 
+
 
 
 
@@ -35,9 +74,7 @@ The Fluorescence Detector system at the Pierre Auger Observatory consists of an 
 \label{fig:Visible_mode_setup_side}
 \end{figure}
 
-The above setup works well for the \textit{invisible mode}($10^{-4} \lesssim \epsilon \lesssim 10^{-3}$, $m_{A'} \lesssim 1 \text{GeV}$) but requires modification for the search of $A'(X)$ in the \textit{visible mode}($10^{-4} \lesssim \epsilon \lesssim 10^{-3}$, $m_{A'} \lesssim 100 \text{MeV}$). To search for the visible decays a short tungsten calorimeter (WCAL) and a veto ($V_2$) were added right after the vacuum pipe and before the second set of tracking detectors (fig.(\ref{fig:Visible_mode_setup})). The size of the WCAL was selected so that the leakage of particles is small and the sensitivity to short lifetimes is maximized. The distance between the WCAL and the ECAL for the visible mode searches was slightly varied(2.5m->5.6m) between 2017 and 2018 which allowed for the installation of a 3.1m long vacuum tube to create better spacing between the ECAL and WCAL for a better angular resolution to increase the sensitivity to X17 bosons~\cite{Banerjee_2018}. A WCAL catcher was also installed in 2018 to prevent any leakage. Additionally the beam momentum was increased from 100GeV to 150 GeV in 2018 and one of the tracking station consisting of two MicroMegas (MM) was also shifted upstream of the WCAL. Counter ($W_2$) and straw detectors ($\text{ST}_{1-3}$) were also tested during the 2018 beam period(fig.(\ref{fig:Visible_mode_setup_side})). Both \textit{invisible} and \textit{visible} mode setups were also used to look for rare SM events that involve a photon decaying to a dimuon pair via bremsstrahlung $e^-Z\rightarrow e^-Z\gamma;\gamma\rightarrow \mu^{+} \mu^{-} $. Comparing these rare events, which were obtained from real data, to our Monte Carlo(MC) simulated sample helped in estimating the validity and efficiency of our MC simulation~\cite{Gninenko:2677228}.
 
-In summary, NA64 tries to estimate and tag the beam $e^-s$ using a combination of trackers, SRD and ECAL/WCAL, uses the said ECAL/WCAL as an active target and then collects the residue of the interaction in the downstream HCAL/ECAL+HCAL. It also utilizes the hard bremsstrahlung photon to dimuon conversion as a measuring stick for the reliability of the MC simulations. The reactions of interest were attempted to be observed with a combination of hardware and software triggers depending on the expected signature of the decay mode for $A'$.
 
 \textbf{Invisible Mode:}
 $A'\rightarrow \chi \overline{\chi}$ signature:
